--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
-.App {
-  text-align: center;
+
+@media screen and (min-width: 1025px) {
+  /* Add your styles here */
+  .heroImg{
+    width:30rem;
+   }
+   .intro{
+    padding-top: 6rem;
+    margin: auto;
+   }
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+/* Styles for tablets like iPad with a width between 768px and 1023px */
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  /* Add your styles here */
+  .heroImg{
+    width:24rem;
+   }
+   .intro{
+    padding-top: 4rem;
+    margin: auto;
+   }
+   .center{
+    text-align: center;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/* Styles for mobile devices with a maximum width of 767px */
+@media screen and (max-width: 767px) {
+  .d-flex{
+    flex-direction: column;
   }
-  to {
-    transform: rotate(360deg);
+  .center{
+    text-align: center;
   }
+  .heroImg{
+    width:17rem;
+   }
+   .intro{
+    padding-top: 1rem;
+    margin: auto;
+   }
 }
