--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,8 @@
     text-align: center;
   }
   .heroImg{
-    width:17rem;
+    padding-top: 1.9rem;
+    width:16rem;
    }
    .intro{
     padding-top: 1rem;
