--- a/src/Styles/common.css
+++ b/src/Styles/common.css
@@ -4,7 +4,26 @@
 .navbar-toggler{
 border: none;
 }
-
+.btn-outline{
+  border: none!important;
+}
+.resume-download{
+  color: rgb(4 196 255)!important;
+  border: 2px solid rgb(4 196 255);
+  background-image: -webkit-linear-gradient(30deg, rgb(19, 30, 37) 50%, transparent 50%);
+  background-image: linear-gradient(30deg, rgb(19, 30, 37) 50%, transparent 50%);
+  background-size: 500px;
+  background-repeat: no-repeat;
+  background-position: 0%;
+  -webkit-transition: background 300ms ease-in-out;
+  transition: background 300ms ease-in-out;
+}
+.resume-download:hover{
+   /* transform: scale(1.05); */
+   background-position: 100%;
+   color: #fff!important;
+  border: 2px solid rgb(182, 237, 255)!important;
+}
 .navbar-toggler:focus{
   --bs-navbar-toggler-focus-width: 0.0rem !important;
   box-shadow: 0 0 0 var(--bs-navbar-toggler-focus-width);
@@ -61,14 +80,14 @@ border: none;
   cursor: pointer;
 }
 .nav-link:hover{
-  text-decoration:underline
+  color: rgb(218, 246, 255)!important;
 }
 .navbar-nav .nav-link.active,
 .navbar-nav .nav-link.show {
   color: white;
 }
 .nav-link:hover {
-  color: rgb(98, 195, 255);
+  color: rgb(98, 237, 255);
 }
 @media screen and (min-width: 1025px) {
    .scroller{
