--- a/src/index.css
+++ b/src/index.css
@@ -10,11 +10,14 @@ body {
   -moz-osx-font-smoothing: grayscale;
  
   color: white ;
+
 }
 @media screen and (min-width: 1025px) {
   body {
     /* background: radial-gradient(circle at 84.9% 15.2%, rgb(255, 124, 0) 7%, rgb(252, 148, 51) 13.9%, rgb(255, 163, 76) 10.9%, rgb(255, 163, 77) 17.8%, rgb(19, 30, 37) 15.5%, rgb(19, 30, 37) 66%); */
-    background:radial-gradient(circle at 74.5% 12.2%, rgb(1, 183, 255) 5%, rgb(27, 197, 239) 10.9%, rgb(76 193 255) 7.9%, rgb(77 217 255) 14.8%, rgb(19, 30, 37) 13.5%, rgb(19, 30, 37) 66%)
+
+    background: radial-gradient(circle at 992.5% 14.7%, rgb(1, 183, 255) 2%, rgb(27, 197, 239) 8%, rgb(76, 193, 255) 8%, rgb(77, 217, 255) 10%, rgb(19, 30, 37) 8%,rgb(19, 30, 37) 66%);
+   
   }
 }@media screen and (min-width: 768px) and (max-width: 1024px) {
   body {
