--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ body {
 @media screen and (max-width: 767px) {
   body {
     /* background: radial-gradient(circle at 50.9% 22.2%, rgb(255, 125, 4) 5%, rgb(252, 148, 51) 5.9%, rgb(255, 163, 76) 5.9%, rgb(255, 163, 77) 6.8%, rgb(19, 30, 37) 4.5%, rgb(19, 30, 37) 66%); */
-    background: radial-gradient(circle at 50.9% 21.5%, rgb(1, 183, 255) 5%, rgb(27, 197, 239) 5.9%, rgb(76 193 255) 5.9%, rgb(77 217 255) 6.8%, rgb(19, 30, 37) 4.5%, rgb(19, 30, 37) 66%);
+    background: radial-gradient(circle at 0% 0%, rgb(1, 183, 255) 0%, rgb(27, 197, 239) 0%, rgb(76 193 255) 0%, rgb(77 217 255) 0%, rgb(19, 30, 37) 0%, rgb(19, 30, 37) 100%);
   }
 }
 code {
@@ -36,8 +36,7 @@ code {
 
 swiper-container {
   width: 100%;
-  height: 100%;
-  padding-bottom: 8rem;
+  height: 31rem;
 }
 
 swiper-slide {
@@ -72,14 +71,13 @@ figure.snip1192 * {
 }
 figure.snip1192 img {
   max-width: 100%;
-
-border-radius: 8px;
-
+  border-radius: 8px;  
   margin-bottom: 10px;
   display: inline-block;
   z-index: 1;
   position: relative;
 }
+
 figure.snip1192 blockquote {
   margin: 0;
   display: block;
@@ -120,7 +118,7 @@ figure.snip1192 .author {
 figure.snip1192 .author h5 {
   opacity: 0.8;
   margin: 0;
-  font-weight: 800;
+  font-weight: 500;
 }
 figure.snip1192 .author h5 span {
   font-weight: 400;
